More extendible code structure & initial tests added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "strict": true,
     "useDefineForClassFields": true,
     "strictNullChecks": true,
+    "esModuleInterop": true,
   },
   "include": [
     "src",
