--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node --loader ts-node/esm src/index.ts",
-    "debug": "node --loader ts-node/esm src/index.ts --inspect"
+    "debug": "node --loader ts-node/esm src/index.ts --inspect",
+    "tests": "jest",
+    "tests:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@comunica/query-sparql": "^2.9.0",
@@ -14,11 +16,17 @@
     "@comunica/query-sparql-solid": "^2.4.0",
     "@solid/community-server": "^6.0.2",
     "@types/node": "^20.4.5",
+    "denque": "^2.1.0",
     "solidbench": "^1.7.1",
     "sparqlalgebrajs": "^4.3.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.0-dev.20240217"
+    "@golevelup/ts-jest": "^0.4.0",
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-jest-resolver": "^2.0.1",
+    "typescript": "^5.3.3"
   }
 }
