--- a/package.json
+++ b/package.json
@@ -1,32 +1,46 @@
 {
-  "name": "combine-agg-queries",
-  "author": "Thibeau Vercruyssen",
-  "version": "0.1.0",
-  "type": "module",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts",
-    "debug": "node --loader ts-node/esm src/index.ts --inspect",
-    "tests": "jest",
-    "tests:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
-  },
-  "dependencies": {
-    "@comunica/query-sparql": "^2.9.0",
-    "@comunica/query-sparql-file": "^2.9.0",
-    "@comunica/query-sparql-solid": "^2.4.0",
-    "@solid/community-server": "^6.0.2",
-    "@types/node": "^20.4.5",
-    "denque": "^2.1.0",
-    "solidbench": "^1.7.1",
-    "sparqlalgebrajs": "^4.3.3",
-    "ts-node": "^10.9.1"
-  },
-  "devDependencies": {
-    "@golevelup/ts-jest": "^0.4.0",
-    "@jest/globals": "^29.7.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "ts-jest-resolver": "^2.0.1",
-    "typescript": "^5.3.3"
-  }
+    "name": "combine-agg-queries",
+    "author": "Thibeau Vercruyssen",
+    "version": "0.1.0",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node --loader ts-node/esm src/index.ts",
+        "debug": "node --loader ts-node/esm src/index.ts --inspect",
+        "tests": "jest",
+        "tests:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "prepare": "husky"
+    },
+    "dependencies": {
+        "@comunica/query-sparql": "^2.9.0",
+        "@comunica/query-sparql-file": "^2.9.0",
+        "@comunica/query-sparql-solid": "^2.4.0",
+        "@solid/community-server": "^6.0.2",
+        "@types/node": "^20.4.5",
+        "denque": "^2.1.0",
+        "solidbench": "^1.7.1",
+        "sparqlalgebrajs": "^4.3.3",
+        "ts-node": "^10.9.1"
+    },
+    "devDependencies": {
+        "@golevelup/ts-jest": "^0.4.0",
+        "@jest/globals": "^29.7.0",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-no-autofix": "^1.2.3",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "husky": "^8.0.3",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
+        "ts-jest": "^29.1.2",
+        "ts-jest-resolver": "^2.0.1",
+        "tsc-files": "^1.1.4",
+        "typescript": "^5.3.3"
+    }
 }
