--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,22 @@
 {
-  "compilerOptions": {
-    "typeRoots": [
-      "./src/types"
-    ],
-    "module": "nodenext",
-    "lib": [
-      "ES2020"
-    ],
-    "noEmit": true,
-    "target": "es2020",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "composite": true,
-    "noErrorTruncation": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "useDefineForClassFields": true,
-    "strictNullChecks": true,
-    "esModuleInterop": true,
-  },
+    "compilerOptions": {
+        "typeRoots": ["./src/types"],
+        "module": "nodenext",
+        "lib": ["ES2020"],
+        "noEmit": true,
+        "target": "es2020",
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true,
+        "composite": true,
+        "noErrorTruncation": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "useDefineForClassFields": true,
+        "strictNullChecks": true,
+        "esModuleInterop": true
+    },
+    "include": ["src/**/*", "package.json"]
 }
