--- a/package.json
+++ b/package.json
@@ -12,19 +12,15 @@
         "prepare": "husky"
     },
     "dependencies": {
-        "@comunica/query-sparql": "^2.9.0",
-        "@comunica/query-sparql-file": "^2.9.0",
-        "@comunica/query-sparql-solid": "^2.4.0",
-        "@solid/community-server": "^6.0.2",
         "@types/node": "^20.4.5",
         "denque": "^2.1.0",
-        "solidbench": "^1.7.1",
         "sparqlalgebrajs": "^4.3.3",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
         "@golevelup/ts-jest": "^0.4.0",
         "@jest/globals": "^29.7.0",
+        "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "^8.57.0",
@@ -37,6 +33,7 @@
         "husky": "^8.0.3",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
+        "object-hash": "^3.0.0",
         "prettier": "^3.2.5",
         "ts-jest": "^29.1.2",
         "ts-jest-resolver": "^2.0.1",
