--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node --loader ts-node/esm src/index.ts",
-        "debug": "node --loader ts-node/esm src/index.ts --inspect",
+        "debug": "node --loader ts-node/esm --inspect-brk src/index.ts",
         "tests": "jest",
         "tests:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
         "prepare": "husky"
@@ -30,8 +30,10 @@
         "eslint-plugin-jest": "^27.2.1",
         "eslint-plugin-no-autofix": "^1.2.3",
         "eslint-plugin-unused-imports": "^2.0.0",
+        "expect": "^29.7.0",
         "husky": "^8.0.3",
         "jest": "^29.7.0",
+        "jest-extended": "^4.0.2",
         "lint-staged": "^15.2.2",
         "object-hash": "^3.0.0",
         "prettier": "^3.2.5",
