--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-    "name": "combine-agg-queries",
+    "name": "move-sparql-unions-to-top",
     "author": "Thibeau Vercruyssen",
     "version": "0.1.0",
     "type": "module",
     "main": "src/index.js",
     "scripts": {
         "start": "node --loader ts-node/esm src/index.ts",
-        "debug": "node --loader ts-node/esm --inspect-brk src/index.ts",
+        "start:debug": "node --loader ts-node/esm --inspect-brk src/index.ts",
         "tests": "jest",
         "tests:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
         "prepare": "husky"
     },
     "dependencies": {
-        "@types/node": "^20.4.5",
         "denque": "^2.1.0",
         "sparqlalgebrajs": "^4.3.3",
         "ts-node": "^10.9.1"
@@ -20,9 +19,12 @@
     "devDependencies": {
         "@golevelup/ts-jest": "^0.4.0",
         "@jest/globals": "^29.7.0",
+        "@types/debug": "^4.1.12",
+        "@types/node": "^20.11.30",
         "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "debug": "^4.3.4",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-import-resolver-typescript": "^3.5.5",
@@ -40,6 +42,6 @@
         "ts-jest": "^29.1.2",
         "ts-jest-resolver": "^2.0.1",
         "tsc-files": "^1.1.4",
-        "typescript": "^5.3.3"
+        "typescript": "^5.4.3"
     }
 }
