--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
+        "rootDir": "./",
+        "outDir": "dist",
         "typeRoots": ["./node_modules/@types", "./src/types"],
         "module": "nodenext",
         "lib": ["ES2021"],
-        "noEmit": true,
         "target": "es2020",
         "paths": {
-            "@src/*": ["src/*"],
-            "@tests/*": ["tests/*"]
+            "@src/*": ["./src/*"],
+            "@tests/*": ["./tests/*"]
         },
         "allowSyntheticDefaultImports": true,
         "composite": true,
@@ -23,7 +23,7 @@
         "strictNullChecks": true,
         "useDefineForClassFields": true
     },
-    "include": ["src/**/*", "tests/**/*", "package.json"],
+    "include": ["./src/**/*", "./tests/**/*", "./package.json"],
     "ts-node": {
         "experimentalSpecifierResolution": "node",
         "transpileOnly": true,
