--- a/bench/tsconfig.json
+++ b/bench/tsconfig.json
@@ -1,4 +1,9 @@
 {
     "extends": "../tsconfig.json",
-    "include": ["src/**/*"]
+    "compilerOptions": {
+        "paths": {},
+        "noEmit": true,
+        "target": "es2020",
+    },
+    "include": ["src/**/*"],
 }
