--- a/bench/package.json
+++ b/bench/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "bench",
-  "author": "Thibeau Vercruyssen",
-  "version": "0.1.0",
-  "type": "module",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts",
-    "start:debug": "node --loader ts-node/esm --inspect-brk src/index.ts"
-  },
-  "dependencies": {
-    "@comunica/query-sparql": "=2.10.2",
-    "csv-parse": "^5.5.5",
-    "move-sparql-unions-to-top": "file:../dist",
-    "object-hash": "^3.0.0",
-    "sparqlalgebrajs": "^4.3.4",
-    "ts-node": "^10.9.1"
-  },
-  "devDependencies": {
-    "@rdfjs/types": "^1.1.0",
-    "@types/debug": "^4.1.12",
-    "@types/node": "^20.11.30",
-    "@types/object-hash": "^3.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-no-autofix": "^1.2.3",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint": "^8.57.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
-  }
+    "name": "bench",
+    "author": "Thibeau Vercruyssen",
+    "version": "0.1.0",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node --loader ts-node/esm src/index.ts",
+        "start:debug": "node --loader ts-node/esm --inspect-brk src/index.ts"
+    },
+    "dependencies": {
+        "@comunica/query-sparql": "=2.10.2",
+        "csv-parse": "^5.5.5",
+        "move-sparql-unions-to-top": "file:../dist",
+        "object-hash": "^3.0.0",
+        "sparqlalgebrajs": "^4.3.4",
+        "ts-node": "^10.9.1"
+    },
+    "devDependencies": {
+        "@rdfjs/types": "^1.1.0",
+        "@types/debug": "^4.1.12",
+        "@types/node": "^20.11.30",
+        "@types/object-hash": "^3.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-no-autofix": "^1.2.3",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
+        "type-fest": "^4.18.2",
+        "typescript": "^5.4.5"
+    }
 }
