--- a/bench/tsconfig.json
+++ b/bench/tsconfig.json
@@ -6,5 +6,5 @@
         "target": "es2020",
         "outDir": "./dist"
     },
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*", "./bin/*"]
 }
