--- a/bench/package.json
+++ b/bench/package.json
@@ -1,25 +1,25 @@
 {
     "name": "bench",
-    "author": "Thibeau Vercruyssen",
     "version": "0.1.0",
+    "author": "Thibeau Vercruyssen",
     "type": "module",
     "main": "src/index.js",
     "scripts": {
+        "build": "tsc --noEmit false && sed 's|export const PROJECT_DIR = path.dirname(path.dirname(FILENAME));|export const PROJECT_DIR = path.dirname(path.dirname(path.join(FILENAME, \"../..\")));|g' -i ./dist/bench/src/utils.js",
         "start": "node --loader ts-node/esm --enable-source-maps bin/bench.ts",
         "start:debug": "node --loader ts-node/esm --enable-source-maps --inspect-brk bin/bench.ts",
-        "build": "tsc --noEmit false && sed 's|export const PROJECT_DIR = path.dirname(path.dirname(FILENAME));|export const PROJECT_DIR = path.dirname(path.dirname(path.join(FILENAME, \"../..\")));|g' -i ./dist/bench/src/utils.js",
         "start:node": "npm run build && node dist/bench/bin/bench.js",
         "gen-table": "node --loader ts-node/esm --enable-source-maps bin/gen-table.ts",
         "gen-table:debug": "node --loader ts-node/esm --enable-source-maps --inspect-brk bin/gen-table.ts",
-        "avg-union-operands-count": "node --loader ts-node/esm --enable-source-maps bin/avg-union-operands-count.ts",
+        "calc-avg-union-operands-count": "node --loader ts-node/esm --enable-source-maps bin/calc-avg-union-operands-count.ts",
         "number-of-results-per-query-substitution": "node --loader ts-node/esm --enable-source-maps bin/number-of-results-per-query-substitution.ts"
     },
     "dependencies": {
-        "@comunica/bindings-factory": "^3.1.0",
-        "@comunica/query-sparql": "=2.10.2",
+        "@comunica/bindings-factory": "<3",
+        "@comunica/query-sparql": "<3",
         "csv-parse": "^5.5.5",
         "minimist": "^1.2.8",
-        "move-sparql-unions-to-top": "file:../dist",
+        "rewrite-sparql-unions-to-top": "file:../dist",
         "object-hash": "^3.0.0",
         "object-sizeof": "^2.6.4",
         "sparqlalgebrajs": "^4.3.4",
